--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insurance Quote Calculator (Indonesia) </title>
+    <title>Insurance Quote Calculator</title>
     <link rel="stylesheet" href="style1.css"> <!-- Link to your stylesheet -->
 </head>
 <body>
@@ -74,4 +74,29 @@
             <label for="maternity">Maternity</label>
         </div>
 
-        <div class="chec
+        <div class="checkbox-container">
+            <input type="checkbox" id="optical"> 
+            <label for="optical">Optical</label>
+        </div>
+
+        <!-- Payment Frequency Selection -->
+        <div>
+            <label for="paymentFrequency">Payment Frequency: </label>
+            <select id="paymentFrequency">
+                <option value="Annual">Annual</option>
+                <option value="Semi-Annual">Semi-Annual</option>
+                <option value="Quarterly">Quarterly</option>
+            </select>
+        </div>
+
+        <!-- Calculate Premium Button -->
+        <button id="calculate">Calculate Premium</button>
+
+        <!-- Display Area for Quote and Breakdown -->
+        <h2 id="quote"></h2>
+        <ul id="breakdown"></ul>
+    </div>
+
+    <script src="main.js"></script> <!-- Ensure this points to your main.js -->
+</body>
+</html>
